layout issues (Issue #664)

--- a/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
+++ b/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
@@ -1478,7 +1478,6 @@ input:disabled.imixs-date   {
 .dashboard-card.lead {
   font-size: 2rem;
   font-weight: bold;
-  color: #428bca;
   margin-bottom: 0;
 }
 
